# wb-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: config.py
src/cli/: main.py
src/cli/commands/: general_extra.py  get_inventory.py  get_media.py  get_products.py  get_seller_info.py  get_users.py  get_warehouses.py  products_extra.py  set_price.py
src/core/: models.py
src/services/: general.py  inventory.py  media.py  prices.py  products.py  products_extra.py  warehouse.py
tests/: test_get_seller_info.py  test_get_warehouses.py
